# astrotools

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
astrotools/: __init__.py  config.py  periodogram.py  plotting.py
astrotools/atlas/: __init__.py  bls.py  config.py  lightcurves.py  paths.py
astrotools/spectral/: __init__.py  binary_system.py  model_atmospheres.py  model_atmospheres_fit.py  spectral_analysis.py
astrotools/tess/: __init__.py  io.py  lightcurves.py  matching.py  photometry.py
astrotools/tess/gpu/: __init__.py  _backend.py  crowding.py  photometry.py  pipeline.py
astrotools/time/: __init__.py  barycentric.py  series.py
docs/: development.md
examples/: gd71_tremblay_nlte_clean_fit.ipynb  hst_standard_atmosphere_validation.ipynb
examples/data/hst_g191b2b/mastDownload/HST/la9g01010/: la9g01010_x1dsum.fits
examples/data/hst_g191b2b/mastDownload/HST/o4dd16020/: o4dd16020_x1d.fits
examples/data/hst_g191b2b/mastDownload/HST/o53002070/: o53002070_x1d.fits
examples/data/hst_standard/mastDownload/HST/obc401m5q/: obc401m5q_x1d.fits
